<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorrg"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <include
        android:id="@+id/include"
        layout="@layout/common_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/loadingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <ProgressBar
            style="@android:style/Widget.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/progress_medium_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginLeft="5dp"
            android:text="@string/wait_a_minute" />
    </LinearLayout>



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/include"
        android:background="@color/transparent"
        android:fadingEdge="none"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"

            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorcommmetimg">


                <LinearLayout
                    android:id="@+id/linearlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <ImageView
                        android:id="@+id/iv_avator"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="fitXY" />

                    <TextView
                        android:id="@+id/tv_moment_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="name"
                        android:textColor="#ffffff"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_create_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dp_48px"
                        android:gravity="center"
                        android:text="time"
                        android:textColor="@color/colorWhite"
                        android:textSize="13sp" />
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/fl_frame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearlayout"
                    android:layout_marginTop="14dp"
                    android:paddingLeft="34px"
                    android:paddingRight="34px">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_imgs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:background="@color/transparent"
                        android:visibility="visible" />

                    <!--<ImageView-->
                    <!--android:id="@+id/iv_preimgview"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:visibility="visible"-->
                    <!--android:layout_below="@id/linearlayout"-->
                    <!--android:layout_height="200dp"-->
                    <!--android:scaleType="fitCenter" />-->
                    <RelativeLayout
                        android:id="@+id/rl_play"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBlack"
                        android:gravity="center"
                        android:visibility="gone">
                        <cn.jzvd.JzvdStd
                            android:id="@+id/video_view"
                            android:layout_width="match_parent"
                            android:layout_height="300dp">
                        </cn.jzvd.JzvdStd>

                    </RelativeLayout>
                </FrameLayout>

                <TextView
                    android:id="@+id/tv_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fl_frame"
                    android:layout_marginTop="15dp"
                    android:paddingBottom="19dp"
                    android:paddingLeft="34px"
                    android:paddingRight="34px"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:background="@color/colorrg" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colordetail"
                android:gravity="center"
                android:paddingTop="18px"
                android:text="@string/moment_comment"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colordetail"
                android:gravity="center"
                android:text="c  o  m  m  e  n  t"
                android:textColor="#ffffff"
                android:textSize="10sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_commonlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colordetail"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:visibility="visible">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/tv_nocomment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colordetail"
                android:gravity="center"
                android:paddingBottom="50dp"
                android:paddingTop="50dp"
                android:text="@string/nocomment"
                android:textColor="@color/colorWhite"
                android:visibility="gone" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/tv_nonet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/colorrg"
        android:textColor="@color/colorWhite"
        android:textSize="17sp"
        android:visibility="gone"
        android:text="@string/errortips"
        />

</RelativeLayout>
