<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:background="@color/colorrg">

    <include
        android:id="@+id/include"
        layout="@layout/common_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_below="@+id/include"
            android:layout_height="match_parent"
            android:fadingEdge="none"
            android:background="@color/transparent"
            android:overScrollMode="never">

            <LinearLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <LinearLayout
                android:background="@color/colordetail"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">
                <TextView
                    android:id="@+id/tv_infodetal_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30px"
                    android:gravity="center"
                    android:text="title"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:textSize="17sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="29px"
                    android:gravity="center_vertical|center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_create_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dp_48px"
                        android:gravity="center"
                        android:text="time"
                        android:textColor="@color/colorWhite"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_msgnum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dp_48px"
                        android:drawableLeft="@mipmap/moment_msg"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/colorWhite"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_viewnum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@mipmap/eyes"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/colorWhite"
                        android:textSize="13sp" />
                </LinearLayout>


                <TextView
                    android:id="@+id/tv_infocontent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="63px"
                    android:text="content"
                    android:layout_marginBottom="@dimen/dp_10"

                    android:textColor="#ffffff"
                    android:textSize="16sp" />
            </LinearLayout>

                <TextView
                    android:id="@+id/tv_infocomment"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="63px"
                    android:text="@string/infocomment"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:background="@color/colordetail"/>
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="c o m m  e n t"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:background="@color/colordetail"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_commonlist"
                   android:paddingLeft="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colordetail">

                </androidx.recyclerview.widget.RecyclerView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_nocomment"
                    android:paddingBottom="@dimen/dp_10"
                    android:text="@string/nocomment"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"
                    android:visibility="gone"
                    />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/tv_nonet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/colorrg"
        android:textColor="@color/colorWhite"
        android:textSize="17sp"
        android:visibility="gone"
        android:text="@string/errortips"
        android:clickable="true"
        android:onClick="onNonetTvClick"
        />
</RelativeLayout>
